# SDiZO_1

./: .gitignore  CMakeLists.txt  Enums.h  SDiZO.h  main.cpp
Structures/Array/: DynamicArray.hpp  DynamicArray.tpp
Structures/Heap/: BinaryHeap.hpp  BinaryHeap.tpp
Structures/List/: DoublyLinkedList.hpp  DoublyLinkedList.tpp  ListElement.hpp  ListElement.tpp
Structures/Tree/: RedBlackTree.hpp  RedBlackTree.tpp  TreeNode.hpp  TreeNode.tpp
Testing/: IDGen.cpp  IDGen.hpp  Tests.cpp  Tests.h  TimeMeasurement.hpp
UI/: Menu.cpp  Menu.h
